--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/*position and appearance of body and container*/
 body{
     background-image: url("background.jpg");
     background-repeat: no-repeat;
@@ -17,6 +18,7 @@ body{
     border-radius: 25px;
 }
 
+/*container text position and size*/
 #title{
     text-align: center;
     font-size: clamp(1rem, 2vw, 3rem);
@@ -35,6 +37,7 @@ body{
     margin-top: 5vh;
 }
 
+/*buttons appearance*/
 #buttons{
     margin-top: -90px;
     margin-left: 35vw;
@@ -60,6 +63,7 @@ body{
     font-weight: bold;
 }
 
+/*position of buttons*/
 #anotherOne{
     margin-left: 2%;
     margin-right: 5%;
@@ -70,6 +74,7 @@ body{
     margin-right: 2%;
 }
 
+/*animations for joke setup and punchline*/
 @keyframes setupAppear{
     from{
         color: rgba(0, 0, 0, 0);
